[package]
name = "br0wse"
description = "A zero conf browse gui with gpui"
version = "0.1.0"
edition = "2021"
authors = ["Dominik @monkeydom Wagner <wagnr@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/monkeydom/br0wse"
repository = "https://github.com/monkeydom/br0wse"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# while experimental, pin to my own fork
gpui = { git = "https://github.com/monkeydom/zed", rev = "dbebb40956259dbe6ca03333129fb65d048539f8" }
serde = "*"
zeroconf = { path = "../zeroconf-rs/zeroconf" }
log = "*"
env_logger = "*"
futures = "*"
smol = "*"
